--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Browser extension to edit and inspect CSS animations",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "watch": "vite build --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "https://github.com/ubermanu/animer",
@@ -11,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "prettier": "^2.2.1",
-    "vite": "^2.2.3"
+    "vite": "^2.2.3",
+    "webextension-polyfill": "^0.8.0"
   }
 }
