--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "animer",
   "version": "0.1.0",
   "description": "Browser extension to edit and inspect CSS animations",
-  "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,8 +12,12 @@
   "author": "ubermanu <manu@paca.happy-dev.fr>",
   "license": "MIT",
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.9",
     "prettier": "^2.2.1",
     "vite": "^2.2.3",
     "webextension-polyfill": "^0.8.0"
+  },
+  "dependencies": {
+    "svelte": "^3.38.1"
   }
 }
