--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.9",
+    "lodash-es": "^4.17.21",
     "prettier": "^2.2.1",
     "vite": "^2.2.3",
     "webextension-polyfill": "^0.8.0"
