--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "svelte": "^3.38.2"
+    "color": "^3.1.3",
+    "svelte": "^3.38.2",
+    "svelte-color-picker": "^1.0.7"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.10",
